tests/NormalTests/paczka2/big_fuzzy/52586765.err
Error in line 1: A693 A693 5,6
Error in line 10: z0JacoCVS A602 7,1
Error in line 11: A693 A780 90,5
Error in line 18: 6fIK A780 17,2
Error in line 28: 6fIK A602 24,1
Error in line 45: mk8tH A602 96,6
Error in line 46: mk8tH A693 2,0
Error in line 31: 6fIK A693 81,7
Error in line 47: mk8tH A602 35,7
Error in line 51: mk8tH A693 54,6
Error in line 60: ohJrzy A927 25,2
Error in line 62: z0JacoCVS A927 33,3
Error in line 70: z0JacoCVS A693 53,1
Error in line 95: iSxbCiy A 02 78,8
Error in line 88: iSxbCiy A780 154,4
Error in line 98: ohJrzy A693 86,;
Error in line 96: iSxbCiy A602 305,0
Error in line 104: ohJrzy A927 83,6
Error in line 87: 6fIK A780 7,4
Error in line 106: ohJrzy A693 28,6
Error in line 112: ohJrzy A780 41,5
Error in line 114: A693 A780 87,8
Error in line 116: A693 A693 83,1
Error in line 119: A693 A927 91,7
Error in line 120: A693 A602 49,7
Error in line 121: A693 A927 24,5
Error in line 128: mk8tH A927 92,0
Error in line 118: ohJrzy A927 210,5
Error in line 141: mk8tH A602 75,8
Error in line 127: A693 A602 311,0
Error in line 125: iSxbCiy A780 71,5
Error in line 149: mk8tH A693 64,3
Error in line 153: ohJrzy A927 8,4
Error in line 162: z0JacoCVS A780 0,16
Error in line 174: mk8tH A927 219,9
Error in line 173: 6fIK A927 42,9
Error in line 176: z0JacoCVS A693 64,2
Error in line 185: z0JacoCVS A927 46,1
Error in line 208: z0JacoCVS A602 88,9
Error in line 227: ohJrzy A780 97,07
Error in line 203: iSxbCiy A602 23,3
Error in line 240: z0JacoCVS A927 5,2
